--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches: [ master ]
   schedule:
-    - cron: "5 0 * * *"
+#     - cron: "5 0 * * *"
+    - cron: "0 0 1 * *"
   workflow_dispatch:
 
 permissions:
